--- a/cluehuntercollector/gui/Cluehunter.fxml
+++ b/cluehuntercollector/gui/Cluehunter.fxml
@@ -34,6 +34,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -43,19 +44,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="371.0" prefWidth="204.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.cluehuntercollector.gui.Controller">
+<VBox prefHeight="301.0" prefWidth="418.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar prefHeight="15.0" prefWidth="339.0" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
+            <MenuItem fx:id="menunew" mnemonicParsing="false" onAction="#menunew" text="New" />
+            <MenuItem fx:id="menuopen" mnemonicParsing="false" onAction="#menuopen" text="Open…" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
+            <MenuItem fx:id="menusave" mnemonicParsing="false" onAction="#menusave" text="Save" />
+            <MenuItem fx:id="menusaveas" mnemonicParsing="false" onAction="#menusaveas" text="Save As…" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
+            <MenuItem fx:id="menuquit" mnemonicParsing="false" onAction="#menuquit" text="Quit" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
@@ -67,23 +68,26 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="368.0" prefWidth="453.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="346.0" prefWidth="310.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button layoutX="45.0" layoutY="272.0" mnemonicParsing="false" onAction="#startScriptPressed" prefHeight="36.0" prefWidth="146.0" text="Start script" />
+            <Button layoutX="241.0" layoutY="233.0" mnemonicParsing="false" prefHeight="3.0" prefWidth="146.0" text="Start script" />
             <Label layoutX="14.0" layoutY="14.0" text="Clue hunter gear to collect">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <CheckBox fx:id="helm" layoutX="14.0" layoutY="47.0" mnemonicParsing="false" text="Helm of raedwald" />
-            <CheckBox fx:id="garb" layoutX="14.0" layoutY="155.0" mnemonicParsing="false" text="Clue hunter garb" />
-            <CheckBox fx:id="trousers" layoutX="14.0" layoutY="182.0" mnemonicParsing="false" text="Clue hunter trousers" />
+            <CheckBox layoutX="14.0" layoutY="47.0" mnemonicParsing="false" text="Helm of raedwald" />
+            <CheckBox layoutX="14.0" layoutY="155.0" mnemonicParsing="false" text="Clue hunter garb" />
+            <CheckBox layoutX="14.0" layoutY="182.0" mnemonicParsing="false" text="Clue hunter trousers" />
             <Label layoutX="33.0" layoutY="71.0" prefHeight="17.0" prefWidth="208.0" text="Please note that for collecting" />
             <Label layoutX="33.0" layoutY="88.0" text="the helm, you will need a nature" />
             <Label layoutX="33.0" layoutY="105.0" text="rune, leather boots, and a super-" />
-            <Label layoutX="33.0" layoutY="122.0" text="-antiposion(1)" />
-            <CheckBox fx:id="bootsandgloves" layoutX="14.0" layoutY="209.0" mnemonicParsing="false" text="Clue hunter boots and gloves" />
-            <CheckBox fx:id="cloak" layoutX="14.0" layoutY="237.0" mnemonicParsing="false" text="Clue hunter cloak" />
+            <Label layoutX="33.0" layoutY="122.0" text="-antiposion(1)." />
+            <CheckBox layoutX="14.0" layoutY="209.0" mnemonicParsing="false" text="Clue hunter boots and gloves" />
+            <CheckBox layoutX="14.0" layoutY="237.0" mnemonicParsing="false" text="Clue hunter cloak" />
+            <CheckBox fx:id="usefood" layoutX="241.0" layoutY="71.0" mnemonicParsing="false" text="Use food" />
+            <ChoiceBox fx:id="foodchoice" layoutX="241.0" layoutY="93.0" prefHeight="25.0" prefWidth="129.0" />
+            <CheckBox fx:id="usestamina" layoutX="241.0" layoutY="47.0" mnemonicParsing="false" text="Use stamina potions" />
          </children></AnchorPane>
   </children>
 </VBox>
