--- a/cluehuntercollector/gui/Cluehunter.fxml
+++ b/cluehuntercollector/gui/Cluehunter.fxml
@@ -44,7 +44,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="301.0" prefWidth="418.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.cluehuntercollector.ClueHunterCollector.gui.Controll">
+<VBox prefHeight="301.0" prefWidth="418.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.cluehuntercollector.gui.Controller">
   <children>
     <MenuBar prefHeight="15.0" prefWidth="339.0" VBox.vgrow="NEVER">
       <menus>
