--- a/cluehuntercollector/gui/Cluehunter.fxml
+++ b/cluehuntercollector/gui/Cluehunter.fxml
@@ -50,13 +50,13 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem fx:id="menunew" mnemonicParsing="false" onAction="#menunew" text="New" />
-            <MenuItem fx:id="menuopen" mnemonicParsing="false" onAction="#menuopen" text="Open…" />
+            <MenuItem fx:id="menunew" mnemonicParsing="false"  text="New" />
+            <MenuItem fx:id="menuopen" mnemonicParsing="false"  text="Open…" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem fx:id="menusave" mnemonicParsing="false" onAction="#menusave" text="Save" />
-            <MenuItem fx:id="menusaveas" mnemonicParsing="false" onAction="#menusaveas" text="Save As…" />
+            <MenuItem fx:id="menusave" mnemonicParsing="false"  text="Save" />
+            <MenuItem fx:id="menusaveas" mnemonicParsing="false" text="Save As…" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem fx:id="menuquit" mnemonicParsing="false" onAction="#menuquit" text="Quit" />
+            <MenuItem fx:id="menuquit" mnemonicParsing="false" text="Quit" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
