--- a/aLooter.fxml
+++ b/aLooter.fxml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="582.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.aLooter.gui.Controller">
   <tabs>
     <Tab text="Looting">
@@ -33,7 +46,7 @@
                   <Button fx:id="reloadGroundItemsButton" layoutY="531.0" mnemonicParsing="false" onAction="#reloadGroundItemsButtonPressed" prefHeight="25.0" prefWidth="145.0" text="Reload ground items" />
                   <Button fx:id="saveSettingsButton" layoutX="142.0" layoutY="531.0" mnemonicParsing="false" onAction="#saveSettingsButtonPressed" prefHeight="25.0" prefWidth="148.0" text="Save settings" />
                   <Button fx:id="loadSettingsButton" layoutX="291.0" layoutY="531.0" mnemonicParsing="false" onAction="#loadSettingsButtonPressed" prefHeight="25.0" prefWidth="145.0" text="Load settings" />
-                  <Button fx:id="startScriptButton" layoutX="436.0" layoutY="531.0" mnemonicParsing="false" onAction="#loadSettingsButtonPressed" prefHeight="25.0" prefWidth="146.0" text="Start script" />
+                  <Button fx:id="startScriptButton" layoutX="436.0" layoutY="531.0" mnemonicParsing="false" onAction="#startScriptButtonPressed" prefHeight="25.0" prefWidth="146.0" text="Start script" />
                   <CheckBox fx:id="minimumStackCheckBox" layoutX="301.0" layoutY="429.0" mnemonicParsing="false" text="Minimum stack for stackable items:" />
                   <Spinner fx:id="minimumStackSpinner" editable="true" layoutX="510.0" layoutY="425.0" prefHeight="25.0" prefWidth="67.0" />
                   <CheckBox fx:id="eatFoodForLootCheckBox" layoutX="301.0" layoutY="457.0" mnemonicParsing="false" text="Eat food to make space for loot" />
