--- a/aLooter.fxml
+++ b/aLooter.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -41,20 +40,20 @@
                   <Button fx:id="addSelectedItemButton" layoutX="-1.0" layoutY="398.0" mnemonicParsing="false" onAction="#addSelectedItemPressed" prefHeight="25.0" prefWidth="292.0" text="Add selected item" />
                   <Button fx:id="removeSelectedItemButton" layoutX="292.0" layoutY="398.0" mnemonicParsing="false" onAction="#removeSelectedItemButtonPressed" prefHeight="25.0" prefWidth="290.0" text="Remove selected item" />
                   <CheckBox fx:id="lootAnyItemOverCheckBox" layoutX="14.0" layoutY="429.0" mnemonicParsing="false" text="Loot any item worth over:" />
-                  <Spinner fx:id="lootAnyItemOverSpinner" editable="true" layoutX="177.0" layoutY="425.0" prefHeight="25.0" prefWidth="72.0" />
                   <Label layoutX="251.0" layoutY="429.0" text="coins" />
                   <Button fx:id="reloadGroundItemsButton" layoutY="531.0" mnemonicParsing="false" onAction="#reloadGroundItemsButtonPressed" prefHeight="25.0" prefWidth="145.0" text="Reload ground items" />
                   <Button fx:id="saveSettingsButton" layoutX="142.0" layoutY="531.0" mnemonicParsing="false" onAction="#saveSettingsButtonPressed" prefHeight="25.0" prefWidth="148.0" text="Save settings" />
                   <Button fx:id="loadSettingsButton" layoutX="291.0" layoutY="531.0" mnemonicParsing="false" onAction="#loadSettingsButtonPressed" prefHeight="25.0" prefWidth="145.0" text="Load settings" />
                   <Button fx:id="startScriptButton" layoutX="436.0" layoutY="531.0" mnemonicParsing="false" onAction="#startScriptButtonPressed" prefHeight="25.0" prefWidth="146.0" text="Start script" />
                   <CheckBox fx:id="minimumStackCheckBox" layoutX="301.0" layoutY="429.0" mnemonicParsing="false" text="Minimum stack for stackable items:" />
-                  <Spinner fx:id="minimumStackSpinner" editable="true" layoutX="510.0" layoutY="425.0" prefHeight="25.0" prefWidth="67.0" />
                   <CheckBox fx:id="eatFoodForLootCheckBox" layoutX="301.0" layoutY="457.0" mnemonicParsing="false" text="Eat food to make space for loot" />
                   <CheckBox fx:id="dropItemsWorthLessCheckBox" layoutX="14.0" layoutY="457.0" mnemonicParsing="false" text="Drop items that are worth less than set value" />
                   <CheckBox fx:id="walkAroundAreaCheckBox" layoutX="14.0" layoutY="487.0" mnemonicParsing="false" text="Walk around area if we've gone" />
-                  <Spinner fx:id="walkAroundAreaSpinner" editable="true" layoutX="210.0" layoutY="483.0" prefHeight="25.0" prefWidth="64.0" />
                   <Label layoutX="34.0" layoutY="508.0" text="seconds without finding any new loot" />
                   <CheckBox fx:id="ignoreJunkItemsCheckBox" layoutX="301.0" layoutY="487.0" mnemonicParsing="false" text="Ignore &quot;junk items&quot;" />
+                  <TextField fx:id="lootAnyItemOverSpinner" layoutX="177.0" layoutY="425.0" prefHeight="25.0" prefWidth="69.0" />
+                  <TextField fx:id="walkAroundAreaSpinner" layoutX="212.0" layoutY="483.0" prefHeight="25.0" prefWidth="61.0" />
+                  <TextField fx:id="minimumStackSpinner" layoutX="514.0" layoutY="425.0" prefHeight="25.0" prefWidth="57.0" />
                </children></AnchorPane>
       </content>
     </Tab>
@@ -74,9 +73,7 @@
                      </font></Label>
                   <Button fx:id="setCollectionArea" layoutX="69.0" layoutY="139.0" mnemonicParsing="false" onAction="#setCollectionAreaButtonPressed" prefHeight="34.0" prefWidth="148.0" text="Set collection area" />
                   <Button fx:id="setWaitingTileButton" layoutX="339.0" layoutY="139.0" mnemonicParsing="false" onAction="#setWaitingTileButtonPressed" prefHeight="35.0" prefWidth="148.0" text="Set waiting tile" />
-                  <Spinner fx:id="customRadiusSpinner" layoutX="69.0" layoutY="203.0" />
                   <Label layoutX="69.0" layoutY="186.0" text="Custom collection radius " />
-                  <Spinner fx:id="customWaitTileRadiusSpinner" layoutX="339.0" layoutY="203.0" />
                   <Label layoutX="339.0" layoutY="186.0" text="Custom waiting tile radius" />
                   <Line endX="502.0" layoutX="90.0" layoutY="278.0" startX="-100.0" />
                   <Label layoutX="224.0" layoutY="296.0" text="Custom Explv's Map Area">
@@ -88,6 +85,8 @@
                   <Label layoutX="14.0" layoutY="347.0" prefHeight="17.0" prefWidth="522.0" text="You now can click generate an area and paste it in the box." />
                   <TextArea fx:id="customExplvMapArea" layoutX="14.0" layoutY="364.0" prefHeight="137.0" prefWidth="554.0" />
                   <CheckBox fx:id="emergencyEscapeCollectionAreaCheckBox" layoutX="69.0" layoutY="246.0" mnemonicParsing="false" text="Emergency teleport/run to bank if we get pulled out side of our collection area" />
+                  <TextField fx:id="customRadiusSpinner" layoutX="69.0" layoutY="203.0" />
+                  <TextField fx:id="customWaitTileRadiusSpinner" layoutX="339.0" layoutY="203.0" />
                </children></AnchorPane>
       </content>
     </Tab>
@@ -108,7 +107,6 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <Spinner fx:id="maxWildernessLevelSpinner" layoutX="162.0" layoutY="414.0" />
                   <CheckBox fx:id="attemptToSafesSpotCheckBox" layoutX="21.0" layoutY="92.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="233.0" text="Attempt to safespot" />
                   <Label layoutX="113.0" layoutY="160.0" text="Leaving a lot of extra space here for future combat settings" />
                   <GridPane layoutX="21.0" layoutY="266.0" prefHeight="178.0" prefWidth="455.0">
@@ -130,6 +128,7 @@
                         <CheckBox fx:id="maxWildernessLevelCheckBox" mnemonicParsing="false" text="Max wilderness level" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
+                  <TextField fx:id="maxWildernessLevelSpinner" layoutX="158.0" layoutY="413.0" prefHeight="25.0" prefWidth="48.0" />
                </children>
             </AnchorPane>
         </content>
@@ -167,9 +166,7 @@
                   <CheckBox fx:id="healingTypeCheckBox" layoutX="25.0" layoutY="444.0" mnemonicParsing="false" text="Healing type" />
                   <ChoiceBox fx:id="healingTypeChoiceBox" layoutX="124.0" layoutY="440.0" prefHeight="25.0" prefWidth="140.0" />
                   <Label layoutX="26.0" layoutY="482.0" text="HP to eat at" />
-                  <Spinner fx:id="hpToEatAtSpinner" layoutX="124.0" layoutY="478.0" prefHeight="25.0" prefWidth="139.0" />
                   <Label layoutX="26.0" layoutY="517.0" text="Amount of food" />
-                  <Spinner fx:id="amountOfFoodSpinner" layoutX="124.0" layoutY="513.0" prefHeight="25.0" prefWidth="140.0" />
                   <Line endX="-2.0" endY="64.0" layoutX="291.0" layoutY="496.0" startX="-2.0" startY="-122.5" />
                   <Label layoutX="306.0" layoutY="382.0" text="Potion settings">
                      <font>
@@ -182,6 +179,8 @@
                   <ChoiceBox fx:id="useEnergyPotionChoiceBox" layoutX="438.0" layoutY="404.0" prefHeight="25.0" prefWidth="123.0" />
                   <ChoiceBox fx:id="useAntipoisonChoiceBox" layoutX="438.0" layoutY="440.0" prefHeight="25.0" prefWidth="123.0" />
                   <ChoiceBox fx:id="useAntifireChoiceBox" layoutX="437.0" layoutY="478.0" prefHeight="25.0" prefWidth="124.0" />
+                  <TextField fx:id="hpToEatAtSpinner" layoutX="124.0" layoutY="478.0" prefHeight="25.0" prefWidth="141.0" />
+                  <TextField fx:id="amountOfFoodSpinner" layoutX="124.0" layoutY="513.0" prefHeight="25.0" prefWidth="142.0" />
                </children>
             </AnchorPane>
         </content>
@@ -201,8 +200,6 @@
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
                   <ChoiceBox fx:id="lootingMethodChoiceBox" layoutX="144.0" layoutY="169.0" prefHeight="25.0" prefWidth="114.0" />
-                  <Spinner fx:id="forceLootSpinner" layoutX="246.0" layoutY="201.0" prefHeight="25.0" prefWidth="92.0" />
-                  <Spinner fx:id="automaticallyBankAtSpinner" layoutX="292.0" layoutY="266.0" prefHeight="25.0" prefWidth="98.0" />
                   <Label layoutX="396.0" layoutY="270.0" text="in loot" />
                   <Line endX="551.0" layoutX="75.0" layoutY="347.0" startX="-100.0" />
                   <Label layoutX="17.0" layoutY="359.0" text="Extra options">
@@ -268,6 +265,8 @@
                         <CheckBox fx:id="endScriptIfWeAreMissingRequiredItemsCheckBox" mnemonicParsing="false" prefHeight="17.0" prefWidth="246.0" text="End script if we are missing required items" GridPane.rowIndex="6" />
                      </children>
                   </GridPane>
+                  <TextField fx:id="forceLootSpinner" layoutX="243.0" layoutY="203.0" prefHeight="25.0" prefWidth="71.0" />
+                  <TextField fx:id="automaticallyBankAtSpinner" layoutX="289.0" layoutY="266.0" prefHeight="25.0" prefWidth="101.0" />
                </children>
             </AnchorPane>
         </content>
