--- a/simplelooter.fxml
+++ b/simplelooter.fxml
@@ -83,32 +83,20 @@
                               <JFXToggleButton fx:id="LootItemToggleButton" layoutX="13.0" layoutY="3.0" text="Loot every item over" />
                               <Spinner fx:id="LootItemSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="211.0" layoutY="19.0" prefHeight="25.0" prefWidth="104.0" />
 		
-                              <TextField fx:id="LootItemTextField" editable="true" layoutX="211.0" layoutY="49.0" prefHeight="25.0" prefWidth="104.0" />
+                              <TextField fx:id="LootItemTextField" editable="true" layoutX="211.0" layoutY="49.0" prefHeight="25.0" prefWidth="104.0" promptText="item name"/>
+                            
                               <JFXToggleButton fx:id="ActiveRoamToggleButton" layoutX="14.0" layoutY="121.0" text="Actively roam the area" />
                               <JFXToggleButton fx:id="ReturnToIdleToggleButton" layoutX="13.0" layoutY="192.0" text="Return to idle area " />
                               <JFXCheckBox fx:id="CustomRoamTimeCheckBox" layoutX="28.0" layoutY="170.0" text="Custom roam timer (secs)" />
-                              <Spinner fx:id="CustomRoamTimeSpinner" editable="true" layoutX="211.0" layoutY="167.0" prefHeight="25.0" prefWidth="101.0" />
+                              <Spinner fx:id="CustomRoamTimeSpinner" editable="true" layoutX="211.0" layoutY="167.0" prefHeight="25.0" prefWidth="107.0" />
                               <JFXCheckBox fx:id="EmergencyTeleportCheckBox" layoutX="28.0" layoutY="267.0" text="Emegency teleport if we cannot reach our waiting tile" />
                               <JFXCheckBox fx:id="CustomIdleAreaTimerCheckBox" layoutX="28.0" layoutY="240.0" text="Custom idle area timer" />
-                              <Spinner fx:id="CustomIdleAreaTimerSpinner" editable="true" layoutX="211.0" layoutY="237.0" prefHeight="25.0" prefWidth="102.0" />
+                              <Spinner fx:id="CustomIdleAreaTimerSpinner" editable="true" layoutX="211.0" layoutY="237.0" prefHeight="25.0" prefWidth="107.0" />
                               <Button fx:id="StartScriptButton" layoutX="413.0" layoutY="116.0" mnemonicParsing="false" onAction="#startScriptButtonPressed" prefHeight="69.0" prefWidth="149.0" text="Start script" />
-                              <GridPane layoutX="29.0" layoutY="49.0" prefHeight="70.0" prefWidth="337.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="324.0" minWidth="10.0" prefWidth="324.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="258.0" minWidth="10.0" prefWidth="19.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <JFXCheckBox fx:id="LootItemCheckBox" prefHeight="27.0" prefWidth="178.0" text="Only loot specific item name" />
-                                    <JFXCheckBox fx:id="SpamClickCheckBox" text="Spam click mode (when competing with other players)" GridPane.rowIndex="1" />
-                                    <JFXCheckBox fx:id="BankOverValueCheckBox" prefHeight="0.0" prefWidth="93.0" text="Bank if we have over X value" GridPane.rowIndex="2" />
-                                 </children>
-                              </GridPane>
-                              <Spinner fx:id="BankOverSpinner" editable="true" layoutX="209.0" layoutY="94.0" prefHeight="25.0" prefWidth="106.0" />
+                              <Spinner fx:id="BankOverSpinner" editable="true" layoutX="228.0" layoutY="94.0" prefHeight="25.0" prefWidth="107.0" />
+                              <JFXCheckBox fx:id="LootItemCheckBox" layoutX="28.0" layoutY="50.0" prefHeight="23.0" prefWidth="187.0" text="Only loot specific item name" />
+                              <JFXCheckBox fx:id="BankOverValueCheckBox" layoutX="28.0" layoutY="98.0" prefHeight="0.0" prefWidth="93.0" text="Bank if we have over X value" />
+                              <JFXCheckBox fx:id="SpamClickCheckBox" layoutX="28.0" layoutY="74.0" text="Spam click mode" />
                            </children>
                         </AnchorPane>
                   </content>
