--- a/simplelooter.fxml
+++ b/simplelooter.fxml
@@ -88,12 +88,12 @@
                               <JFXToggleButton fx:id="ActiveRoamToggleButton" layoutX="14.0" layoutY="121.0" text="Actively roam the area" />
                               <JFXToggleButton fx:id="ReturnToIdleToggleButton" layoutX="13.0" layoutY="192.0" text="Return to idle area " />
                               <JFXCheckBox fx:id="CustomRoamTimeCheckBox" layoutX="28.0" layoutY="170.0" text="Custom roam timer (secs)" />
-                              <Spinner fx:id="CustomRoamTimeSpinner" editable="true" layoutX="211.0" layoutY="167.0" prefHeight="25.0" prefWidth="107.0" />
+                              <Spinner fx:id="CustomRoamTimeSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="211.0" layoutY="167.0" prefHeight="25.0" prefWidth="107.0" />
                               <JFXCheckBox fx:id="EmergencyTeleportCheckBox" layoutX="28.0" layoutY="267.0" text="Emegency teleport if we cannot reach our waiting tile" />
                               <JFXCheckBox fx:id="CustomIdleAreaTimerCheckBox" layoutX="28.0" layoutY="240.0" text="Custom idle area timer" />
-                              <Spinner fx:id="CustomIdleAreaTimerSpinner" editable="true" layoutX="211.0" layoutY="237.0" prefHeight="25.0" prefWidth="107.0" />
+                              <Spinner fx:id="CustomIdleAreaTimerSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="211.0" layoutY="237.0" prefHeight="25.0" prefWidth="107.0" />
                               <Button fx:id="StartScriptButton" layoutX="413.0" layoutY="116.0" mnemonicParsing="false" onAction="#startScriptButtonPressed" prefHeight="69.0" prefWidth="149.0" text="Start script" />
-                              <Spinner fx:id="BankOverSpinner" editable="true" layoutX="228.0" layoutY="94.0" prefHeight="25.0" prefWidth="107.0" />
+                              <Spinner fx:id="BankOverSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="228.0" layoutY="94.0" prefHeight="25.0" prefWidth="107.0" />
                               <JFXCheckBox fx:id="LootItemCheckBox" layoutX="28.0" layoutY="50.0" prefHeight="23.0" prefWidth="187.0" text="Only loot specific item name" />
                               <JFXCheckBox fx:id="BankOverValueCheckBox" layoutX="28.0" layoutY="98.0" prefHeight="0.0" prefWidth="93.0" text="Bank if we have over X value" />
                               <JFXCheckBox fx:id="SpamClickCheckBox" layoutX="28.0" layoutY="74.0" text="Spam click mode" />
@@ -107,8 +107,8 @@
                            <children>
                               <ChoiceBox fx:id="locationChoiceBox" layoutX="244.0" layoutY="43.0" prefWidth="150.0" />
                               <Label layoutX="249.0" layoutY="20.0" text="Preset and saved locations" />
-                              <Spinner fx:id="CustomLootingRadiusSpinner" editable="true" layoutX="95.0" layoutY="124.0" prefHeight="25.0" prefWidth="149.0" />
-                              <Spinner fx:id="CustomIdleRadiusSpinner" editable="true" layoutX="394.0" layoutY="124.0" />
+                              <Spinner fx:id="CustomLootingRadiusSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="95.0" layoutY="124.0" prefHeight="25.0" prefWidth="149.0" />
+                              <Spinner fx:id="CustomIdleRadiusSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="394.0" layoutY="124.0" />
                               <Label layoutX="111.0" layoutY="97.0" text="Custom looting radius" />
                               <Label layoutX="415.0" layoutY="97.0" text="Custom idle radius" />
                               <Button fx:id="SetIdleAreaButton" layoutX="428.0" layoutY="178.0" mnemonicParsing="false" onAction="#setIdleAreaPressed" text="Set idle area" />
