--- a/simplelooter.fxml
+++ b/simplelooter.fxml
@@ -52,7 +52,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.aLooter.gui.Controller">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.aLooter.gui.Controller">
   <children>
     <MenuBar prefHeight="25.0" prefWidth="627.0" VBox.vgrow="NEVER">
       <menus>
@@ -80,22 +80,22 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="299.0" prefWidth="646.0">
                            <children>
-                              <JFXToggleButton fx:id="LootItemToggleButton" layoutX="13.0" layoutY="3.0" text="Loot every item over" />
-                              <Spinner fx:id="LootItemSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="211.0" layoutY="19.0" prefHeight="25.0" prefWidth="104.0" />
+                              <JFXToggleButton fx:id="LootItemToggleButton" layoutX="13.0" layoutY="3.0" text="Loot if value is more than" />
+                              <Spinner fx:id="LootItemSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="19.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
 		
-                              <TextField fx:id="LootItemTextField" editable="true" layoutX="228.0" layoutY="49.0" prefHeight="25.0" prefWidth="108.0" promptText="item name"/>
+                              <TextField fx:id="LootItemTextField" editable="true" layoutX="225.0" layoutY="49.0" prefHeight="25.0" prefWidth="108.0" promptText="item name" />
                             
                               <JFXToggleButton fx:id="ActiveRoamToggleButton" layoutX="14.0" layoutY="121.0" text="Actively roam the area" />
                               <JFXToggleButton fx:id="ReturnToIdleToggleButton" layoutX="13.0" layoutY="192.0" text="Return to idle area " />
                               <JFXCheckBox fx:id="CustomRoamTimeCheckBox" layoutX="28.0" layoutY="170.0" text="Custom roam timer (secs)" />
-                              <Spinner fx:id="CustomRoamTimeSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="211.0" layoutY="167.0" prefHeight="25.0" prefWidth="107.0" />
+                              <Spinner fx:id="CustomRoamTimeSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="167.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
                               <JFXCheckBox fx:id="EmergencyTeleportCheckBox" layoutX="28.0" layoutY="267.0" text="Emegency teleport if we cannot reach our waiting tile" />
                               <JFXCheckBox fx:id="CustomIdleAreaTimerCheckBox" layoutX="28.0" layoutY="240.0" text="Custom idle area timer" />
-                              <Spinner fx:id="CustomIdleAreaTimerSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="211.0" layoutY="237.0" prefHeight="25.0" prefWidth="107.0" />
+                              <Spinner fx:id="CustomIdleAreaTimerSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="237.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
                               <Button fx:id="StartScriptButton" layoutX="413.0" layoutY="116.0" mnemonicParsing="false" onAction="#startScriptButtonPressed" prefHeight="69.0" prefWidth="149.0" text="Start script" />
-                              <Spinner fx:id="BankOverSpinner" min="0" max="1000000" initialValue="100" editable="true" layoutX="228.0" layoutY="94.0" prefHeight="25.0" prefWidth="107.0" />
+                              <Spinner fx:id="BankOverSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="94.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
                               <JFXCheckBox fx:id="LootItemCheckBox" layoutX="28.0" layoutY="50.0" prefHeight="23.0" prefWidth="187.0" text="Only loot specific item name" />
-                              <JFXCheckBox fx:id="BankOverValueCheckBox" layoutX="28.0" layoutY="98.0" prefHeight="0.0" prefWidth="93.0" text="Bank if we have over X value" />
+                              <JFXCheckBox fx:id="BankOverValueCheckBox" layoutX="28.0" layoutY="98.0" prefHeight="0.0" prefWidth="93.0" text="Bank if we have over set coins" />
                               <JFXCheckBox fx:id="SpamClickCheckBox" layoutX="28.0" layoutY="74.0" text="Spam click mode" />
                            </children>
                         </AnchorPane>
@@ -107,8 +107,8 @@
                            <children>
                               <ChoiceBox fx:id="locationChoiceBox" layoutX="244.0" layoutY="43.0" prefWidth="150.0" />
                               <Label layoutX="249.0" layoutY="20.0" text="Preset and saved locations" />
-                              <Spinner fx:id="CustomLootingRadiusSpinner" min="0" max="1000000" initialValue="15" editable="true" layoutX="95.0" layoutY="124.0" prefHeight="25.0" prefWidth="149.0" />
-                              <Spinner fx:id="CustomIdleRadiusSpinner" min="0" max="1000000" initialValue="5" editable="true" layoutX="394.0" layoutY="124.0" prefHeight="25.0" prefWidth="149.0" />
+                              <Spinner fx:id="CustomLootingRadiusSpinner" editable="true" initialValue="15" layoutX="95.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
+                              <Spinner fx:id="CustomIdleRadiusSpinner" editable="true" initialValue="5" layoutX="394.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
                               <Label layoutX="111.0" layoutY="97.0" text="Custom looting radius" />
                               <Label layoutX="415.0" layoutY="97.0" text="Custom idle radius" />
                               <Button fx:id="SetIdleAreaButton" layoutX="428.0" layoutY="178.0" mnemonicParsing="false" onAction="#setIdleAreaPressed" text="Set idle area" />
