--- a/simplelooter.fxml
+++ b/simplelooter.fxml
@@ -52,7 +52,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.aLooter.gui.Controller">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.aLooter.gui.Controller">
   <children>
     <MenuBar prefHeight="25.0" prefWidth="627.0" VBox.vgrow="NEVER">
       <menus>
@@ -105,7 +105,7 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ChoiceBox fx:id="locationChoiceBox" layoutX="244.0" layoutY="43.0" prefWidth="150.0" />
+                              <ChoiceBox fx:id="LocationChoiceBox" layoutX="244.0" layoutY="43.0" prefWidth="150.0" />
                               <Label layoutX="249.0" layoutY="20.0" text="Preset and saved locations" />
                               <Spinner fx:id="CustomLootingRadiusSpinner" editable="true" initialValue="15" layoutX="95.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
                               <Spinner fx:id="CustomIdleRadiusSpinner" editable="true" initialValue="5" layoutX="394.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
@@ -121,7 +121,7 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <GridPane layoutX="35.0" layoutY="29.0" prefHeight="164.0" prefWidth="531.0">
+                              <GridPane layoutX="35.0" layoutY="29.0" prefHeight="217.0" prefWidth="531.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="390.0" minWidth="10.0" prefWidth="283.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="0.0" prefWidth="101.0" />
@@ -135,15 +135,21 @@
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <CheckBox fx:id="RequireExactCheckBox" mnemonicParsing="false" prefHeight="17.0" prefWidth="334.0" text="Require exact inventory and gear we start with" />
                                     <CheckBox fx:id="AttackNPCCheckBox" mnemonicParsing="false" text="Attack npcs that attack us" GridPane.rowIndex="1" />
-                                    <CheckBox fx:id="TeleportCheckBox" mnemonicParsing="false" text="Teleport if we are under attack" GridPane.rowIndex="5" />
-                                    <CheckBox fx:id="UseFoodCheckBox" mnemonicParsing="false" text="Use food/Jugs of wine" GridPane.rowIndex="2" />
-                                    <CheckBox fx:id="WorldHopCheckBox" mnemonicParsing="false" text="Worldhop while waiting for respawn" GridPane.rowIndex="4" />
-                                    <CheckBox fx:id="StopOnDeathCheckBox" mnemonicParsing="false" text="Stop script if we die" GridPane.rowIndex="6" />
-                                    <CheckBox fx:id="ItemIsObjectCheckBox" mnemonicParsing="false" text="Item is an object" GridPane.rowIndex="3" />
+                                    <CheckBox fx:id="TeleportCheckBox" mnemonicParsing="false" text="Teleport if we are under attack" GridPane.rowIndex="4" />
+                                    <CheckBox fx:id="UseFoodCheckBox" mnemonicParsing="false" text="Use food/Jugs of wine" GridPane.rowIndex="3" />
+                                    <CheckBox fx:id="WorldHopCheckBox" mnemonicParsing="false" text="Worldhop while waiting for respawn" GridPane.rowIndex="6" />
+                                    <CheckBox fx:id="StopOnDeathCheckBox" mnemonicParsing="false" text="Stop script if we die" GridPane.rowIndex="10" />
+                                    <CheckBox fx:id="ItemIsObjectCheckBox" mnemonicParsing="false" prefWidth="109.0" text="Item is an object" GridPane.rowIndex="9" />
+                                    <CheckBox mnemonicParsing="false" text="Use quickprayers near aggressive enemies" GridPane.rowIndex="2" />
+                                    <CheckBox mnemonicParsing="false" text="High alch specific loot" GridPane.rowIndex="7" />
                                  </children>
                               </GridPane>
                            </children></AnchorPane>
